# bazel

./: README.md  WORKSPACE.bazel  maven_install.json
projects/calculator/: BUILD.bazel  calculator.py  web.py
projects/go_calculator/: BUILD.bazel  main.go  main_test.go
projects/go_web/: BUILD.bazel  main.go
projects/java-prime/: pom.xml
projects/java-prime/src/main/java/info/mahfuz/: BUILD.bazel  Main.java
projects/java-prime/src/main/java/info/mahfuz/services/: BUILD.bazel  Prime.java
projects/java-prime/src/test/java/info/mahfuz/services/: BUILD.bazel  PrimeTest.java
projects/java-random/: pom.xml
projects/java-random/src/main/java/info/mahfuz/: BUILD.bazel  Main.java
projects/java-random/src/main/java/info/mahfuz/utils/: BUILD.bazel  Random.java
projects/java-random/src/test/java/info/mahfuz/utils/: ABCTest.java  BUILD.bazel  RandomTest.java
projects/py_calculator/: BUILD.bazel  calculator.py  calculator_test.py
projects/py_sum/: BUILD.bazel
projects/sum/: BUILD.bazel  sum.py  sum_test.py
