
load("@pip//:requirements.bzl", "requirement")

py_library(
    name = "calculator",
    srcs = ["calculator.py"],
    visibility = ["//projects/python_web:__pkg__"],
    deps = [
        requirement("Flask"),
        "//projects/sum:sum",
    ],
    data = ["requirements.txt"],
)

py_test(
    name = "calculator_test",
    srcs = ["calculator_test.py"],
    deps = [
        ":calculator"
    ],
)

py_binary(
    name = "calculator_web",
    srcs = ["web.py"],
    main = "web.py",
    deps = [":calculator"],
)