java_library(
    name = "utils",
    srcs = glob(["*.java"]),
    deps = [
        "@maven//:junit_junit",
        "//projects/java-random/src/main/java/info/mahfuz/utils",
    ],
)


java_test(
    name = "RandomTest",
    size = "small",
    runtime_deps = [
        ":utils",
        "@maven//:junit_junit", 
    ],
)